assets/scss/style.scss
/* ... */
/* Article */
section.article,
section.page-template {
  @include post-container();
  @include box-shadow(0 1em 3em -0.25em rgba(46, 46, 46, 0.61));
  @media (prefers-color-scheme: dark) {
    @include box-shadow(0 1em 3em -0.25em rgba(17, 17, 17, 0.61));
  }
  margin-top: -160px;
  margin-bottom: 150px;
  position: relative;
  z-index: 10;
  border-radius: 10px;
  background-color: #fff;

  @media #{$ultra-large} {
    margin-top: 0;
    margin-bottom: 350px;
  }

  @media (prefers-color-scheme: dark) {
    background-color: #111111;
    color: #FFFFFF;
  }

  div.content {
    padding: 50px 6%;

    a {
      color: #111;
      border-bottom: #007aff 2px solid;
      text-decoration: none;

      &:hover {
        color: #007aff;
      }

      @media (prefers-color-scheme: dark) {
        color: #92a3ab;
      }
    }

    p, li, blockquote {
      color: #444;
      font-weight: 400;
      font-size: 16px;
      line-height: 1.4em;
      @media (prefers-color-scheme: dark) {
        color: #92a3ab;
      }
    }

    blockquote {
      margin: 0;
      border-left: 2px solid #007aff;
      padding-left: 16px;
    }

    h1,
    h2,
    h3,
    h4,
    h5,
    h6 {
      font-size: 26px;
    }

    img {
      width: 100%;
      height: auto;
    }

    pre code {
      background-color: #111;
      color: white;
      padding: 20px;
      display: block;
    }

    strong {
      font-weight: 700;
    }

    .kg-embed-card {
      margin-left: auto;
      margin-right: auto;
      width: 70%;
      @media #{$small-device} {
        width: 100%;
      }
    }
  }
}

/* Error */
section.error {
  @include default-container();
  margin-bottom: 350px;
  position: relative;
  z-index: 10;

  a {
    color: #007aff;
    text-decoration: none;
  }
}

/* Branding */
section.branding {
  @include default-container();
  position: relative;
  z-index: 10;
  margin-top: -150px;

  div.row {
    width: 100%;
    display: block;

    > .col-12,
    > .col-6,
    > .col-3 {
      display: inline-block;
    }

    .col-12 {
      width: 100%;
    }

    .col-6 {
      width: calc(50% - 16px);
      margin-right: 25px;

      &:last-child {
        margin-right: 0;
      }

      @media #{$small-device} {
        width: 100%;
        margin-right: 0;
      }
    }

    .col-3 {
      width: calc(25% - 23px);
      margin-right: 25px;

      &:last-child {
        margin-right: 0;
      }

      @media #{$small-device} {
        width: 100%;
        margin-right: 0;
      }
    }
  }

  figure {
    background-color: #fff;
    @include box-shadow(0 1em 3em -0.25em rgba(46, 46, 46, 0.61));
    @media (prefers-color-scheme: dark) {
      @include box-shadow(0 1em 3em -0.25em rgba(17, 17, 17, 0.61));
    }
    border-radius: 10px;
    margin: 10px 0;
    text-align: center;

    &.logo {
      background-size: 96px 96px;
      background-position: 50%;
      background-repeat: no-repeat;
      height: 300px;

      &.color {
        background-size: 128px 128px;
        background-image: url(../../img/branding/color.svg);
        height: 500px;
      }

      &.black {
        background-image: url(../../img/branding/black.svg);
      }
      &.white {
        background-color: #111;
        background-image: url(../../img/branding/white.svg);
      }
    }

    &.color {
      height: 200px;
      color: #fff;

      &.purple {
        background-color: #59388d;
      }
      &.blue {
        background-color: #1688a7;
      }
      &.white {
        background-color: #fff;
        color: #111;
      }
      &.light-gray {
        background-color: #c1c1c1;
        color: #111;
      }
      &.dark-gray {
        background-color: #212121;
      }
      &.black {
        background-color: #111;
      }

      span.hex {
        display: block;
        margin-top: 85px;
        font-size: 22px;
      }
    }

    &.font {
      height: 200px;

      &.montserrat {
        font-family: 'Montserrat', sans-serif;
      }

      span.char {
        font-weight: 600;
        font-size: 56px;
        display: block;
        margin-top: 50px;
        color: #111;
      }

      span.name {
        display: block;
        color: #333;
        font-size: 18px;
      }
    }
  }

  div.text {
    padding: 50px 15%;

    p.description {
      font-weight: 300;
      line-height: 1.5em;
    }
  }
}
/* ... */

